Advance augmentation handling in YANG binding API