@@ -223,6 +223,11 @@ task mvnInstallOpenDaylightModules {
 compileJava {
     // options.deprecation = true
     // options.warnings = true
+
+    options.compilerArgs += [
+            '--add-exports', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+            '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
+
 }
 
 gradlePlugin {
